# SentinelNet

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py  setup_and_run_v2.sh
docs/: GITIGNORE_GUIDE.md  GITIGNORE_SUMMARY.md  PHASE1_PROGRESS.md  PLUGIN_ARCHITECTURE.md  PRE_COMMIT_CHECKLIST.md  ROADMAP.md  SETUP_COMPLETE.md
scripts/: pre-commit-check.sh
sentinelnet/: __init__.py  cli.py  database.py
sentinelnet/agents/: __init__.py  azure_monitor.py  communication.py  gcp_monitor.py  remediation.py
sentinelnet/agents/plugins/: __init__.py  autogen_azure.py  google_gcp.py  langchain_multi.py
sentinelnet/api/: main.py
sentinelnet/core/: config.py  orchestrator.py
sentinelnet/dashboard/: app.py
sentinelnet/data/: __init__.py  processor.py
sentinelnet/models/: __init__.py
sentinelnet/monitoring/: grafana.py  prometheus.py
tests/: __init__.py  test_alertmanager_webhook.py
